chat send button page overflow fix

--- a/bbf_synclounge_in_organizr.css
+++ b/bbf_synclounge_in_organizr.css
@@ -203,3 +203,7 @@ main {
 .container {
 	background-color: rgba(0,0,0,0) !important;
 }
+
+.layout.row.wrap .flex.xs12:nth-of-type(2){
+    height: 45vh !important;
+}
